<resources>
    <string name="app_name">TravelCare</string>
    <string name="LOGIN">LOGIN</string>
    <string name="SIGNUP">SIGNUP</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_sub_item_1">item 1</string>
    <string name="nav_sub_item_2">item 2</string>
    <string name="nav_about">About</string>
    <string name="dashboard">Dashboard  </string>
    <string name="events">Events</string>
    <string name="search">Search</string>
    <string name="activities">Activities</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="username">Username</string>
    <string name="registerhere">Register Here</string>
    <string name="profile">Profile</string>
    <string name="firstname">FNAME</string>
    <string name="lastname">LNAME</string>
    <string name="email">EMAIL</string>
    <string name="phone">PHONE</string>
    <string name="register">REGISTER</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="updates">Check updates</string>
    <string name="submit">Submit</string>
    <string name="drawer_username">Nimesh VJ</string>
    <string name="drawer_emailid">Nimeshvijay77@gmail.com</string>
    <string name="welcome">Welcome</string>
    <string name="noofvehicle">VEHICLE LIST</string>
    <string name="mywallet">MY WALLET</string>
    <string name="mileage">MILEAGE</string>
    <string name="calculate">CALCULATE</string>
    <string name="fuelLevel">FUEL LEVEL</string>
    <string name="vehicleName">VEHICLE NAME</string>
    <string name="type">TYPE</string>
    <string name="model">VEHICLE MODEL</string>
    <string name="Brand">VEHICLE BRAND</string>
    <string name="bike">BIKE</string>
    <string name="car">CAR</string>
    <string name="bus">BUS</string>
    <string name="other">OTHER</string>
    <string name="vehicleNo">LICENSE VEHICLE No.</string>
    <string name="feedback">FEEDBACK</string>
    <string name="enter_Feedback">Enter any report suggestions</string>
    <string name="report_Feedback">Report Suggestions</string>
    <string name="select_vehicle">SELECT VEHICLE</string>


    <string name="lessTraffic">LESS TRAFFIC</string>

    <string name="destination">Destination</string>
    <string name="startLocation">Select location</string>

    <string name="addVehicle">Add vehicle</string>


    <string name="profile_picture">Profile picture</string>


    <string name="forgetmessage">Please enter the email id and your password will be sent to your email address</string>


    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="travelcare">TravelCare</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>

    //Firebase Authentication

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>


</resources>
