<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    android:theme="@style/AppTheme"

    android:background="@drawable/gradient"
    tools:context="com.example.muj.travelcare.add_vehicle_form">



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/darkGrey"
            android:elevation="6dp">

        </android.support.v7.widget.Toolbar>


        <EditText
            android:id="@+id/vehicle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/my_toolbar"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/vehicleName"
            android:inputType="textPersonName"
            android:textColorHint="@color/white" />

        <RadioButton
            android:id="@+id/radioButton_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/vehicle_name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/bike"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/radioButton_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton_bike"
            android:layout_below="@+id/radioButton_bike"
            android:text="@string/car"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/radioButton_heavyvehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/radioButton_car"
            android:layout_alignStart="@+id/radioButton_other"
            android:text="@string/bus"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/radioButton_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioButton_heavyvehicle"
            android:layout_centerHorizontal="true"
            android:text="@string/other"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/vehicle_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioButton_other"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/vehicleNo"
            android:inputType="textPersonName"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/vehicle_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vehicle_no"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/Brand"
            android:inputType="textPersonName"
            android:textColorHint="@color/white" />
        <EditText
        android:id="@+id/vehicle_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicle_brand"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/model"
        android:inputType="textPersonName"
        android:textColorHint="@color/white" />


        <EditText
            android:id="@+id/vehicle_mileage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vehicle_model"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/mileage"
            android:inputType="textPersonName"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/button_submit_info"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23dp"
            android:background="@drawable/rectamgular_round_corner_button"
            android:text="@string/submit"
            android:textSize="20sp" />


    </RelativeLayout>


    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/darkGrey"
        app:itemTextColor="@color/darkGrey"
        app:menu="@menu/drawermenu"/>



</android.support.v4.widget.DrawerLayout>
