<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/gradient"
    android:padding="20dp">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@+id/drawer_name"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_picture"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="84dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/drawer_emailid"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="108dp"
        android:id="@+id/textView3" />

    <TextView
        android:id="@+id/drawer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:text="@string/drawer_username" />

    <TextView
        android:id="@+id/welcome_drawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/drawer_name"
        android:layout_alignParentStart="true"
        android:text="@string/welcome" />


</RelativeLayout>