<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:theme="@style/AppTheme"
    tools:context="com.example.muj.travelcare.homepage_main">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/darkGrey"
            android:elevation="6dp">

        </android.support.v7.widget.Toolbar>

        <Button
            android:id="@+id/push_button_addvehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/my_toolbar"
            android:layout_marginTop="25dp"
            android:background="@drawable/rectamgular_round_corner_button"
            android:padding="15dp"
            android:textSize="20sp"
            android:text="@string/addVehicle" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/push_button_addvehicle"
            android:layout_margin="20dp"
            android:background="@drawable/rectamgular_round_corner_button"
            android:text="@string/startLocation"
            android:textSize="19sp" />

        <Button
            android:id="@+id/button_select_vehicle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/button"
            android:layout_below="@+id/button"
            android:layout_marginTop="9dp"
            android:background="@drawable/rectamgular_round_corner_button"
            android:text="@string/select_vehicle"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_wallet"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_select_vehicle"
            android:layout_alignBottom="@+id/button_select_vehicle"
            android:layout_alignEnd="@+id/button"
            android:background="@drawable/rectamgular_round_corner_button"
            android:text="@string/mywallet"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/fuelLevel_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/checkBox_mapsoptions"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="39dp"
            android:background="@drawable/rectamgular_round_corner_button"
            android:hint="@string/fuelLevel"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="@color/black" />

        <CheckBox
            android:id="@+id/checkBox_mapsoptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView_feedback"
            android:layout_alignStart="@+id/button"
            android:layout_marginBottom="76dp"
            android:text="@string/lessTraffic"
            android:textColor="@color/mintgreen" />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView_feedback"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectamgular_round_corner_button"
            android:text="@string/calculate"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            tools:text="@string/feedback"
            android:textColor="@color/white"/>


    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/darkGrey"
        app:itemTextColor="@color/darkGrey"
        app:menu="@menu/drawermenu"/>


</android.support.v4.widget.DrawerLayout>
