<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editText_type_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="@string/enter_Feedback"
        android:inputType="textImeMultiLine|textPersonName"/>

    <TextView
        android:id="@+id/textView_report_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText_type_feedback"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="22dp"
        android:text="@string/report_Feedback"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_submit_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_report_title"
        android:layout_below="@+id/editText_type_feedback"
        android:layout_marginEnd="88dp"
        android:layout_marginTop="31dp"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:clickable="true"
        android:textColor="@color/darkGrey"/>
</RelativeLayout>