<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:theme="@style/AppTheme"
    tools:context="com.example.muj.travelcare.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/darkGrey"
            android:elevation="6dp">

        </android.support.v7.widget.Toolbar>

        <EditText
            android:id="@+id/editText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/imageview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="#11000000"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:layout_marginTop="13dp"
            android:background="#11000000"
            android:drawableStart="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_above="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="52dp"
            android:layout_marginEnd="28dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/cardView"
                android:layout_alignStart="@+id/cardView"
                android:layout_marginBottom="16dp">

                

                
                
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/LOGIN"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:text="@string/registerhere" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <com.google.android.gms.common.SignInButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/googleBtn">

            </com.google.android.gms.common.SignInButton>

        </LinearLayout>

        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="22dp"
            android:text="@string/forgetpassword"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:layout_alignEnd="@+id/forget_pass"
            android:layout_below="@+id/my_toolbar"
            android:contentDescription="@string/travelcare"
            app:srcCompat="@drawable/logotc" />

    </RelativeLayout>


 </RelativeLayout>


