<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.muj.travelcare.forget_password"
    android:background="@drawable/gradient">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/darkGrey"
        android:elevation="6dp">

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/button_submit"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="122dp"
        android:background="@drawable/button_shape_round"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:visibility="visible"
        android:bottomRightRadius="10dp"
        android:bottomLeftRadius="10dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp" />

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_submit"
        android:layout_alignStart="@+id/noteError"
        android:layout_marginBottom="53dp"
        android:layout_marginStart="19dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/noteError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailBox"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="55dp"
        android:layout_marginStart="20dp"
        android:text="@string/forgetmessage"
        android:textSize="20sp"
        android:textColor="@color/white" />


</RelativeLayout>
